yaml/knative/knative-quarkus-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: quarkus
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: quarkus-camel-k-demo.default.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quarkus-camel-k-demo
                port:
                  number: 8080
